--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rootpath",
-	"version": "1.2.2",
+	"version": "1.3.0-pre",
 	"description": "pivot for path hierarchy",
 
 	"keywords": [ "path", "resolve", "rootpath" ],
@@ -19,6 +19,10 @@
 	"repository": { "url": "https://github.com/StreetStrider/rootpath.git", "type": "git" },
 	"bugs":       { "url": "https://github.com/StreetStrider/rootpath/issues" },
 
+	"dependencies":
+	{
+		"lodash.flattendeep": "^3.0.2"
+	},
 	"devDependencies":
 	{
 		"mocha": "~2"
