--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "rootpath",
-	"version": "1.3.0-pre",
+	"version": "1.3.0",
 	"description": "pivot for path hierarchy",
 
-	"keywords": [ "path", "resolve", "rootpath" ],
+	"keywords": [ "path", "resolve", "rootpath", "root", "absolute", "flatten" ],
 
 	"author": "StreetStrider <teamfortresslife@gmail.com>",
 	"license": "MIT",
