--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rootpath",
-	"version": "1.4.0-pre",
+	"version": "1.4.0",
 	"description": "pivot for path hierarchy",
 
 	"keywords": [ "path", "resolve", "rootpath", "root", "absolute", "flatten" ],
