--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,15 @@ node_js:
   - '5'
 env:
   - ESLINT=1
-  - ESLINT=0
 script:
   - '[[ $ESLINT == 0 ]] || npm run st'
   - 'npm test'
 matrix:
   exclude:
     - env: ESLINT=1
+      node_js: '0.12'
+  include:
+    - env: ESLINT=0
       node_js: '0.12'
 
 after_success:
