--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
 
 		     "test":                 "mocha    --check-leaks --recursive tests/",
 		    "cover": "istanbul cover _mocha -- --check-leaks --recursive tests/",
-		"coveralls": "istanbul-coveralls"
+		"coveralls": "istanbul-coveralls",
+
+		      "all": "npm run st; npm run flow; npm run cover;"
 	},
 
 	"dependencies":
