correct author/email.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 
 	"description": "pivot for path hierarchy",
 
-	"author":  "StreetStrider <teamfortresslife@gmail.com>",
+	"author":  "Strider <strange.transistor@gmail.com>",
 	"license": "MIT",
 	"private":  true,
 
