--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "pivot for path hierarchy",
 
 	"author":  "Strider <strange.transistor@gmail.com>",
-	"license": "MIT",
+	"license": "ISC",
 
 	"keywords":
 	[
