--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,7 @@
+
 [ignore]
-
-[include]
-
-[libs]
+; <PROJECT_ROOT>/node_modules/.*
+<PROJECT_ROOT>/release/.*
 
 [options]
 suppress_comment= \\(.\\|\n\\)*\\@flow-off
