--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"files": [ /* "index.ts", */ "test/rootpath.ts" ],
+	"files": [  "rootpath.ts",  "test/rootpath.ts" ],
 	"compilerOptions":
 	{
 		"noEmit": true,
