package.json: pick certain files.

--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
 	"main": "rootpath",
 	"files":
 	[
-		"rootpath.js",
-		"readme.md"
+		"*.js",
+		"*.ts",
+		"!.eslintrc.js"
 	],
 
 	"metalbox":
