--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 			"eslint --ext ts test/",
 
 		"flow":
-			"true || flow check",
+			"flow check",
 
 		"ts":
 			"tsc",
@@ -111,7 +111,7 @@
 
 
 		"flow-bin":
-			"0.56",
+			"0.57",
 
 
 		"typescript":
