--- a/package.json
+++ b/package.json
@@ -58,19 +58,19 @@
 			"eslint --ext ts test/",
 
 		"flow":
-			"flow check",
+			"glow || flow",
 
 		"ts":
 			"tsc",
 
-		"types":
+		"t":
 			"npm run flow && npm run ts",
 
 		 "unit":                 "mocha -R dot --check-leaks --recursive release/dev/test/",
 		"cover": "istanbul cover _mocha     -- --check-leaks --recursive release/dev/test/",
 
 		"test":
-			"npm run st && npm run types && npm run release/dev && npm run unit",
+			"npm run st && npm run t && npm run release/dev && npm run unit",
 
 
 		"coveralls":
