--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 
 
 		"st":
-			"eslint --ext ts test/",
+			"eslint --ext ts rootpath.ts test/",
 
 		"flow":
 			"glow || flow",
@@ -115,10 +115,13 @@
 
 
 		"eslint":
-			"4",
+			"6",
+
+		"@typescript-eslint/parser":
+			"2",
 
 		"js-outlander":
-			"StrangeTransistor/js-outlander#2.3.0",
+			"StrangeTransistor/js-outlander#2.6.0",
 
 
 		"flow-bin":
