--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
-	"files": [ "rootpath.ts", "test/rootpath.ts" ],
+	"files":
+	[
+		"rootpath.ts",
+
+		"test/rootpath.ts",
+
+		"ambient.d.ts"
+	],
 	"compilerOptions":
 	{
 		"noEmit": true,
