--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name":    "@streetstrider/rootpath",
-	"version": "2.0.6",
+	"version": "2.1.0-pre",
 
 	"description": "pivot for path hierarchy",
 
@@ -65,8 +65,8 @@
 		"test":
 			"npm run st && npm run t && npm run release/dev && npm run unit",
 
-		"cover": "nyc -r lcov -r text -x release/dev/test/ npm run unit",
-		"coveralls": "istanbul-coveralls"
+		"cover":
+			"nyc -r lcov -r text -x release/dev/test/ npm run unit"
 	},
 
 	"dependencies":
@@ -142,9 +142,6 @@
 			"10",
 
 		"nyc":
-			"15",
-
-		"istanbul-coveralls":
-			"1"
+			"15"
 	}
 }
